# VINS-Fusion

./: .gitmodules  activity_global_fusion_n.txt  activity_loop_fusion_nod.txt  activity_vins_node.txt  activity_vins_odom.txt
config/kaist/: cam0_v2.yaml  cam1_rect.yaml  cam1_v2.yaml  kaist_config.yaml  kaist_config_stereo_only.yaml  kaist_config_wheel_odometry.yaml
config/skoltech/: left_cam.yaml  right_cam.yaml  skoltech_mono_imu_config.yaml  skoltech_stereo_imu_config.yaml
dnn_fusion/: CMakeLists.txt  package.xml
dnn_fusion/src/: dnnOpt.cpp  dnnOpt.h  dnnOptNode.cpp
global_fusion/src/: globalOptNode.cpp
loop_fusion/src/: pose_graph_node.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/src/: rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  parameters.cpp  parameters.h
vins_estimator/src/factor/: encoder_factor.h
